feat: complete backend implementation with models, controllers, and authentication
- Implemented User, Category, and Expense models with navigation properties.
- Created AppDbContext with DbSets and seeded default categories.
- Configured appsettings.json and Program.cs for JWT authentication and CORS.
- Developed AuthController for user registration and login with JWT token generation.
- Implemented CategoriesController for CRUD operations with authorization.
- Developed ExpensesController for user-specific expense management.
- Added migrations for initial database schema and updated model snapshot.
- Introduced .editorconfig for consistent coding style across the project.

--- a/server/ExpenseTracker.Api/appsettings.json
+++ b/server/ExpenseTracker.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=expense-tracker.db"
+  },
+  "Jwt": {
+    "Key": "super-secret-key-change-in-production-32chars!",
+    "Issuer": "ExpenseTrackerApi",
+    "Audience": "ExpenseTrackerClient",
+    "ExpiryDays": 7
+  },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:5173" ]
+  }
 }
