feat: add category management UI and API endpoints
- Implemented CategoryFormPage for creating and editing categories.
- Added styles for the category form.
- Created API endpoints for retrieving, creating, updating, and deleting categories.
- Enhanced error handling for category deletion if expenses are associated.
- Added LoginPage and RegisterPage for user authentication with validation.
- Created DashboardPage for displaying and filtering expenses.
- Implemented ExpenseFormPage for creating and editing expenses with validation.
- Added utility functions for formatting dates and currencies.
- Introduced type definitions for user, category, expense, and authentication payloads.
- Configured Tailwind CSS for styling.
- Updated database schema and settings for CORS.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "dotnet add": true,
         "Get-Item": true,
         "Set-Content": true,
-        "New-Item": true
+        "New-Item": true,
+        "npx tsc": true,
+        "npx vite": true,
+        "dotnet run": true
     }
 }
