refactor: remove unused CSS modules and components from the expense tracker UI
- Deleted CategoryFormPage.module.css and its associated component.
- Removed AuthForm.module.css and LoginPage, RegisterPage components.
- Cleaned up DashboardPage.module.css and its related DashboardPage component.
- Eliminated ExpenseFormPage.module.css and its corresponding ExpenseFormPage component.
- Removed type definitions from index.ts and utility functions from helpers.ts.
- Deleted validation schemas for login, registration, expenses, and categories.
- Cleaned up Vite configuration and TypeScript configuration files.
- Updated CategoriesController and ExpensesController to remove unused endpoints.
- Adjusted appsettings.json to restrict allowed origins for CORS.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,6 @@
         "dotnet add": true,
         "Get-Item": true,
         "Set-Content": true,
-        "New-Item": true,
-        "npx tsc": true,
-        "npx vite": true,
-        "dotnet run": true
+        "New-Item": true
     }
 }
