--- a/server/ExpenseTracker.Api/appsettings.json
+++ b/server/ExpenseTracker.Api/appsettings.json
@@ -16,6 +16,6 @@
     "ExpiryDays": 7
   },
   "Cors": {
-    "AllowedOrigins": [ "http://localhost:5173", "http://localhost:5174", "http://localhost:5175" ]
+    "AllowedOrigins": [ "http://localhost:5173" ]
   }
 }
