Implement Expense Management Features
- Added DeleteExpenseCommandHandler for handling expense deletion.
- Created GetExpenseByIdQuery and GetExpenseByIdQueryHandler for fetching expenses by ID.
- Implemented GetExpensesQuery and GetExpensesQueryHandler to retrieve all expenses for a user.
- Developed UpdateExpenseCommand and UpdateExpenseCommandHandler for updating existing expenses.
- Introduced UpdateExpenseCommandValidator for validating update requests.
- Created IPasswordService and ITokenService interfaces for password hashing and token generation.
- Implemented AppDbContext for database context management.
- Configured entity mappings for Category, Expense, and User entities.
- Added migrations for initial database setup.
- Developed repositories for User, Category, and Expense management.
- Implemented UnitOfWork pattern for managing database transactions.
- Updated solution file to include new projects.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "dotnet add": true,
         "Get-Item": true,
         "Set-Content": true,
-        "New-Item": true
+        "New-Item": true,
+        "dotnet build": true,
+        "dotnet sln": true
     }
 }
