feat: Add SuperAdmin role and user management functionality
- Updated project overview to include SuperAdmin role management.
- Enhanced user roles to include SuperAdmin in the database schema and API.
- Implemented Users API for SuperAdmin to manage user roles (GET, PUT).
- Updated frontend to include UsersPage for SuperAdmin role management.
- Modified AdminRoute to allow access for both Admin and SuperAdmin.
- Adjusted category management endpoints to be accessible by SuperAdmin.
- Seeded a default SuperAdmin user in the database.
- Updated authentication flow to reflect new role assignments.
- Added error handling for role assignment conflicts in the backend.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Set-Content": true,
         "New-Item": true,
         "dotnet build": true,
-        "dotnet sln": true
+        "dotnet sln": true,
+        "npm run dev": true
     }
 }
